fixed code spacing, MVP done

--- a/css/index.css
+++ b/css/index.css
@@ -577,57 +577,7 @@ nav a {
 #hof {
   font-size: 1.8rem;
 }
-address {
+footer address {
   font-size: 2rem;
   font-weight: bold;
 }
-/*
-.aboutContent h1 {
-    padding: 0 0 0 40px; 
-}
-
-.aboutContent h2{
-    padding: 0 0 0 40px; 
-}
-
-.aboutContent p {
-    // padding: 0 0 0 40px;
-    font-size: 1.6 rem; 
-    @media @phone {
-        width: 450; 
-    }
-}
-
-.aboutContent address{
-    margin: 0 0 0 40px;
-    font-size: 1.8rem; 
-}
-
-
-.teamWrap {
-    display: flex; 
-    flex-direction: column;
-}
-
-
-.titleWrap {
-    display: flex; 
-    flex-direction: column;
-}
-
-
-
-// .mona { 
-//     display: flex; 
-//         img {
-            
-//     //     @media @phone{
-//     //         width: 300px; 
-//     //         height: 300px; 
-//     // } 
-//     }
-//     p{
-//         width: 400px;  
-//     }
-// }
-*/
