--- a/less/about.less
+++ b/less/about.less
@@ -152,67 +152,7 @@ nav a {
 }
 
 
-address{
+footer address{
     font-size: 2rem;
     font-weight: bold;
 }
-
-
-// .aboutContent img{
-//     padding: 0 40px 0 40px;
-//     // @media @phone{
-//     //     margin: 0;  
-//     // } 
-// }
-
-
-/*
-.aboutContent h1 {
-    padding: 0 0 0 40px; 
-}
-
-.aboutContent h2{
-    padding: 0 0 0 40px; 
-}
-
-.aboutContent p {
-    // padding: 0 0 0 40px;
-    font-size: 1.6 rem; 
-    @media @phone {
-        width: 450; 
-    }
-}
-
-.aboutContent address{
-    margin: 0 0 0 40px;
-    font-size: 1.8rem; 
-}
-
-
-.teamWrap {
-    display: flex; 
-    flex-direction: column;
-}
-
-
-.titleWrap {
-    display: flex; 
-    flex-direction: column;
-}
-
-
-
-// .mona { 
-//     display: flex; 
-//         img {
-            
-//     //     @media @phone{
-//     //         width: 300px; 
-//     //         height: 300px; 
-//     // } 
-//     }
-//     p{
-//         width: 400px;  
-//     }
-// }
-*/
